# particle_filter

./: package.xml  setup.py
MIT/: package.xml
MIT/launch/: particle_filter_launch.xml
config/: particle_filter.yaml
jnotebook/: parameter.yaml  topics.ipynb
jnotebook/downsampling/: downsampling_methods.ipynb
jnotebook/initialization/: laserscanner.ipynb  map.ipynb  pose.ipynb
jnotebook/motion_models/: ARC.ipynb  DIFFDRIVE.ipynb  TUM.ipynb  imm_interface.ipynb
jnotebook/sensor_models/: SM_interface.ipynb
particle_filter/: package.xml  particle_filter.py  setup.py
particle_filter/config/: map.yaml  particle_filter.yaml
particle_filter/install/: local_setup.sh  setup.sh
particle_filter/install/particle_filter/lib/particle_filter/: particle_filter
particle_filter/install/particle_filter/share/particle_filter/: package.sh
particle_filter/install/particle_filter/share/particle_filter/config/: particle_filter.yaml
particle_filter/install/particle_filter/share/particle_filter/launch/: localization_launch.xml
particle_filter/launch/: localization_launch.xml
particle_filter/log/: latest_build
particle_filter/particle_filter/: particle_filter_node.py
particle_filter/particle_filter/lidar_downsampling/: downsampling_interface.py  uniform_downsampling.py
particle_filter/utils/: utils.py
synpf/config/: particle_filter.yaml
synpf/particle_filter/: particle_filter.py
vesc/vesc_ackermann/include/vesc_ackermann/: vesc_to_odom.hpp
vesc/vesc_ackermann/src/: vesc_to_odom.cpp
vesc/vesc_driver/: CMakeLists.txt
